--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ coverage
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
+notes.md
 
 # Bower dependency directory (https://bower.io/)
 bower_components
