--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gh-pages": "^3.1.0",
     "nuxt": "^2.14.3",
     "vue-scrollto": "^2.18.2",
+    "vue-slick-carousel": "^1.0.6",
     "vue-virtual-scroller": "^1.0.10"
   },
   "devDependencies": {
